tests-integration/tests/snapshots/checking__partition_duplicate_labels_equal.snap
---
source: tests-integration/tests/checking.rs
expression: snapshot
---
row1: (a: Int, a: String)
row2: (a: Int, a: String)
ok: true
left: []
right: []
