tests-integration/tests/snapshots/checking__partition_duplicate_labels_extra_left.snap
---
source: tests-integration/tests/checking.rs
expression: snapshot
---
row1: (a: Int, a: String, a: Number)
row2: (a: Int, a: String)
ok: true
left: [a :: Number]
right: []
