tests-integration/tests/snapshots/checking__partition_duplicate_labels_extra_right.snap
---
source: tests-integration/tests/checking.rs
expression: snapshot
---
row1: (a: Int)
row2: (a: Int, a: String, a: Number)
ok: true
left: []
right: [a :: String, a :: Number]
