tests-integration/tests/snapshots/checking__partition_duplicate_labels_positional_mismatch.snap
---
source: tests-integration/tests/checking.rs
expression: snapshot
---
row1: (a: Int, a: String)
row2: (a: String, a: Int)
ok: false
left: []
right: []
