tests-integration/tests/snapshots/checking__partition_identical.snap
---
source: tests-integration/tests/checking.rs
expression: snapshot
---
row1: (a: Int, b: String)
row2: (a: Int, b: String)
ok: true
left: []
right: []
