tests-integration/tests/snapshots/checking__partition_unify_failure.snap
---
source: tests-integration/tests/checking.rs
expression: snapshot
---
row1: (a: Int, b: Int)
row2: (a: String, b: Int)
ok: false
left: []
right: []
