tests-integration/tests/snapshots/checking__proxy_inference.snap
---
source: tests-integration/tests/checking.rs
expression: snapshot
---
Terms
Proxy :: forall (t0 :: Type) (a :: *0). (Proxy *0)

Types
Proxy :: forall (t0 :: Type). (*0 -> Type)
