tests-integration/tests/snapshots/checking__quantify_multiple_scoped.snap
---
source: tests-integration/tests/checking.rs
expression: snapshot
---
forall (t0 :: Type) (t1 :: (t0 :: Type)) (t2 :: (t1 :: (t0 :: Type))) (t3 :: Type)
  (t4 :: (t3 :: Type)) (t5 :: (t4 :: (t3 :: Type))).
  (t2 :: (t1 :: (t0 :: Type))) -> (t5 :: (t4 :: (t3 :: Type)))
